--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,8 @@ input {
 .herobox {
     border-radius: 5px;
     position: absolute;
-    left: 35%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 h1 {
@@ -164,7 +165,10 @@ h1 {
 .series-big {
     width: 90%;
     height: auto;
-    border: 3px black;
+    border: 3px solid black;
+    /*position: absolute;*/
+    /*left: 50%;*/
+    /*transform: translateX(-50%);*/
 }
 
 .series-big h1 {
@@ -215,3 +219,16 @@ h1 {
     width: 33%;
 }
 
+/*.parallax1 {*/
+  /* The image used */
+/*  background-image: url("images/tosship.jpeg");*/
+
+  /* Set a specific height */
+/*  min-height: 700px; */
+
+  /* Create the parallax scrolling effect */
+/*  background-attachment: fixed;*/
+/*  background-position: center;*/
+/*  background-repeat: no-repeat;*/
+/*  background-size: cover;*/
+/*}*/
