--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ body {
     background-color: #6AB4E1; /*McCoy blue*/
     height: 100px;
     width: 100%;
-    margin-top: 42px;
+    margin-top: 72px;
 }
 
 .footer-col {
@@ -108,6 +108,7 @@ input {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    margin-top: 350px;
 }
 
 h1 {
@@ -129,6 +130,7 @@ h1 {
     text-align: center;
     float: left;
     width: 14.2%;
+    padding-top: 20px;
 }
 
 .kirk {
